[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
chrono = { version = "0.4.42", features = ["serde"] }
sea-orm = { version = "1.1.16", features = ["sqlx-mysql", "runtime-tokio-rustls", "macros"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
entity = { path = "../sns-shared/entity" }
dotenvy = "0.15.7"
bacon = "3.18.0"
async-trait = "0.1.89"
uuid = "1.18.1"
argon2 = "0.5.3"
thiserror = "2.0.17"
rand_core = { version = "0.9.3", features = ["os_rng"] }
jsonwebtoken = "9.3.0"

[dev-dependencies]
http-body-util = "0.1.3"
mime = "0.3.17"
tower = { version = "0.5.2", features = ["util"] }
rstest = "0.23.0"
